Made all dropdowns consistent

--- a/public/song.html
+++ b/public/song.html
@@ -46,18 +46,9 @@
             <a href="#"><span class="tag">Music Type: Rap</span></a>
           </div>  
           <div class="flexbox-itemhalf2 Flexbox Item 1">
-            <div class="dropdown1">
-              <button onclick="myFunction1()" class="dropbtn1">Search Song</button>
-              <div id="myDropdown1" class="dropdown-content1">
-                <input type="text" placeholder="Search.." id="myInput1" onkeyup="filterFunction1()">
-                <a href="#about">OK!</a>
-                <a href="#support">Quantum Physic</a>
-                <a href="#base">Fergie</a>
-                <a href="#blog">Frank Ocean</a>
-                <a href="#support">Red Hot Chili Pepper</a>
-                <a href="#contact">SZA</a>
-                <a href="#custom">The 1975</a>
-              </div>
+            <div>
+              <p1><label for="songDropdown">Choose Song:</label></p1>
+              <select id="songDropdown"></select>
             </div>
             <img id = "song-image" src="./images/JIDalbum.png" alt="song-picture" width="100%" height="70%">
           </div>
