--- a/public/artist.html
+++ b/public/artist.html
@@ -33,12 +33,13 @@
   </header>
   <body>
     <div id = "container">
-      <div>
-        <label for="compare1Dropdown">Choose Artist:</label>
-        <select id="compare1Dropdown"></select>
-      </div>
+      
       <div class="Flexbox-container2">
         <div class="flexbox-itemhalf1 Flexbox Item 1" >
+          <div>
+            <p1><label for="compare1Dropdown">Choose Artist:</label></p1>
+            <select id="compare1Dropdown"></select>
+          </div>
           <img id = "artist-image" src="./images/example-1975.jpeg" alt="artist-picture">
         </div>
         <div class="flexbox-itemhalf2 Flexbox Item 1" >
