--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -37,11 +37,11 @@
       <div class="row">
         <div class="column">
           <div>
-            <h3 style="float:inline-start ;" for="compare1Dropdown">Choose comparison 1:</h3>
+            <p1><label for="compare1Dropdown">Choose comparison 1:</label></p1>
             <select style=""  id="compare1Dropdown"></select>
           </div>
 
-          <h1 id ="Title1">Artist Comparison</h1>
+          <h1 id ="Title1">Song Comparison</h1>
           <img class = "center img" id = "artist-image" src="./images/example-kanye.jpg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
           <p id = "Music1"> Music Type: </p>
@@ -51,12 +51,12 @@
       </div>
         <div class="column">
           <div>
-            <label for="compare2Dropdown">Choose comparison 2:</label>
+            <p1><label for="compare2Dropdown">Choose comparison 2:</label></p1>
             <select id="compare2Dropdown"></select>
           </div>
 
 
-          <h1 id ="Title2">Artist Comparison</h1>
+          <h1 id ="Title2">Song Comparison</h1>
           <img class = "center img" id = "artist-image" src="./images/example-drake.jpeg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
           <p id = "Music2"> Music Type: </p>
