--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
     </div>
   </div>
   <div id = "footer">
-    <p class = "centered_text">Click here for the documentaion of our site journey</p>
+    <p1 style="clear: both;"   class = "centered_text">Click here for the documentaion of our site journey</p1>
     <p class = "centered_text"><input type="button" onclick="alert('Sorry! Documentation not yet implemented!')" value="Click Me!"></p>
     <!-- 
       temporary message and a link to our documentation will be added once finished with this code below:
