minor stashing changes

--- a/public/artists_comparison.html
+++ b/public/artists_comparison.html
@@ -51,7 +51,7 @@
           height: 150px; object-fit: cover; object-position: 25% 25%;">
          
           <p1>
-          <p id = "Music1"> Music Type: </p>
+          <p id = "Music1"> Genre: </p>
           <p id = "Location1"> Location: </p>
           <p id = "Popularity1"> Popularity Index: </p>
           <p id = "Description1"> Artist Description</p>
@@ -72,7 +72,7 @@
           <img class = "center img" id = "artist-image" src="./images/example-drake.jpeg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
           <p1>
-          <p id = "Music2"> Music Type: </p>
+          <p id = "Music2"> Genre: </p>
           <p id = "Location2"> Location: </p>
           <p id = "Popularity2"> Popularity Index</p>
           <p id = "Description2"> Artist Description</p>
