--- a/public/song.html
+++ b/public/song.html
@@ -100,7 +100,7 @@
     <div id = "footer">
 
     </div>
-    <script src="./scripts/page_track.js">
+    <script type= "module" src="./scripts/page_track.js">
       anyChart.onDocumentReady(function() {
     });
     </script>
