--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -38,13 +38,13 @@
         <div class="column">
           <div>
             <p1><label for="compare1Dropdown">Choose comparison 1:</label></p1>
-            <select style=""  id="compare1Dropdown"></select>
+            <select id="compare1Dropdown"></select>
           </div>
 
           <h1 id ="Title1">Song Comparison</h1>
           <img class = "center img" id = "artist-image" src="./images/example-kanye.jpg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
-          <p id = "Music1"> Music Type: </p>
+          <p id = "Music1"> Genre: </p>
           <p id = "Location1"> Location: </p>
           <p id = "Popularity1"> Popularity Index: </p>
           <p id = "Description1"> Song Description</p>
@@ -59,7 +59,7 @@
           <h1 id ="Title2">Song Comparison</h1>
           <img class = "center img" id = "artist-image" src="./images/example-drake.jpeg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
-          <p id = "Music2"> Music Type: </p>
+          <p id = "Music2"> Genre: </p>
           <p id = "Location2"> Location</p>
           <p id = "Popularity2"> Popularity Index</p>
           <p id = "Description2"> Song Description</p>
