--- a/public/artist.html
+++ b/public/artist.html
@@ -48,11 +48,12 @@
      </div>
      <div class="Flexbox-container2">
         <div class="flexbox-itemhalf1 Flexbox Item 2" style="clear: both;">
-          <p1 id="Music1"> Music Type: Alternative Pop</p1>
-          <br>
-          <p1 id="Location1"> Location: United States</p1>
-          <br>
-          <p1 id = "Views1"> Views: </p1>        
+          <p1>
+            <a href="#"><span class="tag">Album: </span></a>
+            <a id = "Music1"><span class="tag">Genre: </span></a>
+            <a id = "Location1"><span class="tag">Location:</span></a>
+            <a id = "views1"><span class="tag">Views:</span></a>
+          </p1>    
         </div>
         <div class="flexbox-itemhalf2 Flexbox Item 2" >
           <p1 class = "artist-description" id="artist-description">
