moved id tags in comparison pages and took albums out of artist comparison

--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -45,9 +45,9 @@
           <img class = "center img" id = "artist-image" src="./images/example-kanye.jpg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
           <a ><span class="tag">Album: </span></a>
-          <a id = "Music1"><span class="tag">Genre: </span></a>
-          <a id = "Location1"><span class="tag">Location:</span></a>
-          <a id = "Popularity1"><span class="tag">Populatrity Index:</span></a>
+          <span id = "Music1" class="tag">Music Type: </span>
+          <span id = "Location1" class="tag">Location:</span>
+          <span id = "Popularity1" class="tag">Populatrity Index:</span>
           <p1 style="display: block;" id = "Description1"> Song Description</p1>      
         </div>
         <div class="flexbox-itemhalf2 Flexbox Item 2" >
@@ -61,9 +61,9 @@
           <img class = "center img" id = "artist-image" src="./images/example-drake.jpeg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
           <a href="#"><span class="tag">Album: </span></a>
-          <a id = "Music2"><span class="tag">Genre: </span></a>
-          <a id = "Location2"><span class="tag">Location:</span></a>
-          <a id = "Popularity2"><span class="tag">Populatrity Index:</span></a>
+          <span id = "Music2" class="tag">Music Type: </span>
+          <span id = "Location2" class="tag">Location:</span>
+          <span id = "Popularity2" class="tag">Populatrity Index:</span>
           <p1 style="display: block;" id = "Description2"> Song Description</p1>
         </div>
           </div>
