--- a/public/artists_comparison.html
+++ b/public/artists_comparison.html
@@ -51,10 +51,9 @@
             height: 150px; object-fit: cover; object-position: 25% 25%;">
           
             <p1>
-              <a href="#"><span class="tag">Album: </span></a>
-              <a id = "Music1"><span class="tag">Music Type: </span></a>
-              <a id = "Location1"><span class="tag">Location:</span></a>
-              <a id = "Popularity1"><span class="tag">Populatrity Index:</span></a>
+              <span id = "Music1" class="tag">Music Type: </span>
+              <span id = "Location1" class="tag">Location:</span>
+              <span id = "Popularity1" class="tag">Populatrity Index:</span>
               <p1 style="display: block;" id = "Description1"> Song Description</p1>
             </p1>
           </div>
@@ -72,10 +71,9 @@
           <img class = "center img" id = "artist-image" src="./images/example-drake.jpeg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
           <p1>
-            <a href="#"><span class="tag">Album: </span></a>
-            <a id = "Music2"><span class="tag">Genre: </span></a>
-            <a id = "Location2"><span class="tag">Location:</span></a>
-            <a id = "Popularity2"><span class="tag">Populatrity Index:</span></a>
+            <span id = "Music2" class="tag">Music Type: </span>
+              <span id = "Location2" class="tag">Location:</span>
+              <span id = "Popularity2" class="tag">Populatrity Index:</span>
             <p1 style="display: block;" id = "Description2"> Song Description</p1>
           </p1>
           </div>
