landing page styling done. Needs acurate bar chart and better filler photos(not drake)

--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
         </div>
         </div>  
     </div>
-    <div class="flexbox-itemhalf2 Flexbox Item 1">
+    <div class="flexbox-itemhalf2 Flexbox Item 1" style="margin-bottom: 4%;">
       <h3>Analytics</h3>
       <h2>what is our database?</h2>
       <p1>The website relies on a organized extensive catalog of musical 
@@ -96,23 +96,28 @@
         enabling users to compare and contrast various artists and their 
         compositions with ease.
       </p1>
-      <button class="FillButton" style="clear: both; margin-left: 10%; color: black;" href = "artist.html">Artists</button>
+      <br>
+      <a href = "https://www.kaggle.com/datasets/salvatorerastelli/spotify-and-youtube/" target=”_blank”>
+        <button class="FillButton" style="clear: both; margin-left: 30%; color: black;">Our Database</button>
+      </a>
     </div>
   </div>
   <div class="Flexbox-container2">
     <div class="flexbox-itemhalf1 Flexbox Item 1" style="clear: both;">
       <h3>Meet The Devs</h3>
       <h2>who are we?</h2>
-      <p1>Four students from San Francisco State University with a passion for coding while listening to good music. Learn more about us below.
+      <p1>
+        Four students from San Francisco State University with a passion for coding while listening to good music. Learn more about us below.
       </p1>
+      <p1 style="clear: both;"   class = "centered_text">Click here for the documentaion of our site journey</p1>
+      <p class = "centered_text"><input type="button" onclick="alert('Sorry! Documentation not yet implemented!')" value="Click Me!"></p>
     </div>  
     <div class="flexbox-itemhalf2 Flexbox Item 1">
       <img src="./images\example-drake.jpeg" alt="Screenshot" width="100%" height="80%">
     </div>
   </div>
   <div id = "footer">
-    <p1 style="clear: both;"   class = "centered_text">Click here for the documentaion of our site journey</p1>
-    <p class = "centered_text"><input type="button" onclick="alert('Sorry! Documentation not yet implemented!')" value="Click Me!"></p>
+    
     <!-- 
       temporary message and a link to our documentation will be added once finished with this code below:
       <form action="url" method="get" target="_blank">
