Finsihing touches on song page

--- a/public/song.html
+++ b/public/song.html
@@ -40,10 +40,9 @@
           <div class="flexbox-itemhalf1 Flexbox Item 1" style="clear: both;">
             <h3 id = "artist-name">JID, 21 Savage, Baby Tate</h3>
             <h2 id = "song-name">Surround Sound</h2>
-            <a href="#"><span class="tag">Album: The Forever Story</span></a>
+            <a href="#"><span class="tag" id="Album1">Album: The Forever Story</span></a>
             <a href="#"><span class="tag" id="track-type">Genre: Rap</span></a>
-            <a href="#"><span class="tag">Artist: Rap</span></a>
-            <a href="#"><span class="tag">Views: Rap</span></a>
+            <a href="#"><span class="tag" id="track-artist">Artist: </span></a>
           </div>  
           <div class="flexbox-itemhalf2 Flexbox Item 1">
             <div>
