--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -38,15 +38,14 @@
         <div class="flexbox-itemhalf1 Flexbox Item 2" style="clear: both;">
           <div>
             <p1><label for="compare1Dropdown">Choose comparison 1:</label></p1>
-            <select style=""  id="compare1Dropdown"></select>
+            <select id="compare1Dropdown"></select>
           </div>
 
           <h2 id ="Title1">Song Name 1</h2>
           <img class = "center img" id = "artist-image" src="./images/example-kanye.jpg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
-          <a ><span class="tag">Album: </span></a>
+          <a ><span class="tag" id="Artist1">Artist: </span></a>
           <span id = "Music1" class="tag">Music Type: </span>
-          <span id = "Location1" class="tag">Location:</span>
           <span id = "Popularity1" class="tag">Populatrity Index:</span>
           <p1 style="display: block;" id = "Description1"> Song Description</p1>      
         </div>
@@ -60,9 +59,8 @@
           <h2 id ="Title2">Song Name 2</h2>
           <img class = "center img" id = "artist-image" src="./images/example-drake.jpeg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
-          <a href="#"><span class="tag">Album: </span></a>
-          <span id = "Music2" class="tag">Music Type: </span>
-          <span id = "Location2" class="tag">Location:</span>
+          <a href="#"><span class="tag" id="Artist2">Artist: </span></a>
+          <span id = "Music2" class="tag">Genre: </span>
           <span id = "Popularity2" class="tag">Populatrity Index:</span>
           <p1 style="display: block;" id = "Description2"> Song Description</p1>
         </div>
