--- a/public/song_comparison.html
+++ b/public/song_comparison.html
@@ -45,8 +45,8 @@
           <img class = "center img" id = "artist-image" src="./images/example-kanye.jpg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
           <a ><span class="tag" id="Artist1">Artist: </span></a>
-          <span id = "Music1" class="tag">Music Type: </span>
-          <span id = "Popularity1" class="tag">Populatrity Index:</span>
+          <span id = "genre1" class="tag">Genre : </span>
+          <span class="tag" id="Album1">Album: </span>
           <p1 style="display: block;" id = "Description1"> Song Description</p1>      
         </div>
         <div class="flexbox-itemhalf2 Flexbox Item 2" >
@@ -60,8 +60,8 @@
           <img class = "center img" id = "artist-image" src="./images/example-drake.jpeg" alt="artist-picture" style = "width: 150px; 
           height: 150px; object-fit: cover; object-position: 25% 25%;">
           <a href="#"><span class="tag" id="Artist2">Artist: </span></a>
-          <span id = "Music2" class="tag">Genre: </span>
-          <span id = "Popularity2" class="tag">Populatrity Index:</span>
+          <span id = "genre2" class="tag">Genre: </span>
+          <span class="tag" id="Album2">Album: </span>
           <p1 style="display: block;" id = "Description2"> Song Description</p1>
         </div>
           </div>
