--- a/public/artist.html
+++ b/public/artist.html
@@ -49,10 +49,9 @@
      <div class="Flexbox-container2">
         <div class="flexbox-itemhalf1 Flexbox Item 2" style="clear: both;">
           <p1>
-            <a href="#"><span class="tag">Album: </span></a>
-            <a id = "Music1"><span class="tag">Genre: </span></a>
-            <a id = "Location1"><span class="tag">Location:</span></a>
-            <a id = "views1"><span class="tag">Views:</span></a>
+            <a ><span class="tag" id = "Music1">Genre: </span></a>
+            <a ><span class="tag" id = "Location1" >Location:</span></a>
+            <a ><span class="tag">Views:</span></a>
           </p1>    
         </div>
         <div class="flexbox-itemhalf2 Flexbox Item 2" >
