changed placeholder images

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
       </a>
       <button class="FillButton" style="margin-left: 10%; color: black;" href = "artist.html">Artists</button>
     </div>
-      <div class="flexbox-itemhalf2 Flexbox Item 1"><img src="./images\example-drake.jpeg" alt="Screenshot" width="100%" height="80%"></div>
+      <div class="flexbox-itemhalf2 Flexbox Item 1"><img src="./images\exampleComp.jpg" alt="Screenshot" width="100%" height="80%" style="border: 2px solid #FCB72A;"></div>
   </div>
   <svg width="100%" height="100" style="padding-top: 2% ">
       <rect width="100%" height="70%" style="filter: blur(50px);margin-left: 10%; float: right; fill:rgba(108, 150, 122, 0.89); filter:opacity(100%) fil " />
@@ -113,7 +113,7 @@
       <p class = "centered_text"><input type="button" onclick="alert('Sorry! Documentation not yet implemented!')" value="Click Me!"></p>
     </div>  
     <div class="flexbox-itemhalf2 Flexbox Item 1">
-      <img src="./images\example-drake.jpeg" alt="Screenshot" width="100%" height="80%">
+      <img src="./images\ex-Dev.png" alt="Screenshot" width="100%" height="80%">
     </div>
   </div>
   <div id = "footer">
